// -----------------------------------------------
// File : Score.h
// Copyright (c) 2017 yashihei
// Licensed under the MIT license
// -----------------------------------------------

#pragma once

class Score {
public:

};
