@startuml

hide empty members
note "オレンジは未実装" as orange #FFA726

' MainModules
class App {
    + void run()
    + Graphics getGraphics()
    + InputManager getInputManager()
    + AudioManager getAudioManager()
    + AseetsManager getAssetManager()
}

class Window {
    - HWND m_hWnd
    - HINSTANCE m_hInstance
    - Point m_screenSize
} 

class Graphics
class InputManager
class AudioManager
class FPSManager
class SceneManager #FFA726
class AssetsManager #FFA726
class Camera {
    + getViewMat()
    + getProjMat()
}
class LightParam

' Scenes
Interface Scene {
    + Scene* update()
    + void draw()
}
class TitleScene
class StageScene {
    - App*
    - ActorManager<Bullet>
    - ActorManager<Enemy>
    - ActorManager<Particle>
    - Player*
}

' Assets
class Model {
    + void createFromObj()
}
class BasicEffect
class Mesh
class Material
class Sprite
class Sprite2D

' Actors
class ActorManager<Actor> {
    - list<shared_ptr<Actor>> m_actors
    + void add()
    + void updateAll()
    + void drawAll()
}
Interface Actor {
    + void update()
    + void draw()
    + bool isEnabled()
}
class Enemy
class Player
class Score
class Bullet
class Particle

' GlobalFunctions
package Global {
    class Log
    class Random
    class Easing
}

App o-- AssetsManager 
App o-- Graphics
App o-- Window
App o-- InputManager
App o-- AudioManager
App o-- FPSManager
App o-- SceneManager
SceneManager *-- Scene

Scene <|.. TitleScene
Scene <|.. StageScene

Graphics o-- LightParam #FFA726
Graphics o-- Camera #FFA726

AssetsManager o-- Model
AssetsManager o-- Sprite
AssetsManager o-- Sprite2D

Model o-- BasicEffect
Model o-- Mesh
Model o-- Material

Actor -r-* ActorManager
Actor <|.. Enemy
Actor <|.. Player
Actor <|.. Score
Actor <|.. Bullet
Actor <|.. Particle

ActorManager -d-o StageScene

@enduml